<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/page1"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/AINA" />

    <item
        android:id="@+id/page2"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/ExclusivelySold" />

    <item
        android:id="@+id/page3"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/Verfity" />

    <item
        android:id="@+id/page4"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/Message" />

    <item
        android:id="@+id/page5"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/my" />

</menu>
